ipc/ipdl/test/ipdl/ok/PMyManaged.ipdl
include protocol PMyManager;

namespace mozilla {
namespace myns {

[RefCounted] protocol PMyManaged {
  manager PMyManager;
  child:
    async __delete__(Shmem aShmem);
};

}    // namespace myns
}    // namespace mozilla
